# HALO

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
scripts/: halo_eval.sh  halo_train.sh
vlm/: __init__.py
vlm/cli/: eval.py  train.py
vlm/configs/: base.yaml  clip_vit_b16_cc3m_lorentz_lora_negdist.yaml  clip_vit_b16_cc3m_lorentz_lora_negdist_entail.yaml  clip_vit_b32_cc3m_lorentz_lora.yaml  clip_vit_b32_cc3m_lorentz_lora_negdist.yaml  clip_vit_b32_cc3m_lorentz_lora_negdist_entail.yaml  clip_vit_l14_cc3m_lorentz_lora_negdist.yaml  clip_vit_l14_cc3m_lorentz_lora_negdist_entail.yaml  eval_coco_retrieval_vlm_checkpoint.yaml  eval_flickr30k_retrieval_vlm_checkpoint.yaml
vlm/data/: cc3m.py  dataloader.py  tokenizer.py  transforms.py
vlm/eval/: coco_retrieval.py
vlm/geom/: euclidean.py  lorentz.py
vlm/losses/: contrastive_lorentz.py
vlm/models/: clip_like.py  lora.py
vlm/train/: checkpoint.py  engine.py
