[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-vlm"
version = "0.1.0"
description = "HALO: Hyperbolic Adaptation via Lift Overlay for hierarchy-aware cross-modal retrieval"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["vlm*"]
exclude = ["outputs*", "tests*", "hycoclip*", "HySAC*", "other_models*"]

[project.optional-dependencies]
optional = [
  "timm",
  "tensorboard",
  "wandb",
]
